T1/Gramatica.txt
Programa → algoritmo identificador ; BlocoVariaveis ProcedimentoFuncao BlocoComandos .
ProcedimentoFuncao → DeclaraProcedimento ProcedimentoFuncao
ProcedimentoFuncao → DeclaraFuncao ProcedimentoFuncao
ProcedimentoFuncao →
DeclaraP rocedimento → procedimento identificador Parametros ; DeclaraParametros BlocoVariaveis
BlocoComandos ;
DeclaraFuncao → funcao identificador Parametros : TipoBasico ; DeclaraParametros BlocoVariaveis
BlocoComandos ;
Parametros → ( DeclaraIdentificador )
Parametros →
DeclaraParametros → Declaracoes
DeclaraParametros →
BlocoVariaveis → variaveis Declaracoes
BlocoVariaveis →


Declaracoes → DeclaraVariaveis Declaracoes_'
Declaracoes → DeclaraTipo Declaracoes_'
Declaracoes_' → Declaracoes
Declaracoes_' → Declaracoes



DeclaraTipo → tipo identificador = VetorMatriz [ Dimensao ] TipoBasico ;
DeclaraVariaveis → TipoBasico : DeclaraIdentificador ;

DeclaraIdentificador -> identificador DeclaraIdentificador_'
DeclaraIdentificador_' -> , DeclaraIdentificador_'
DeclaraIdentificador_' ->

VetorMatriz → vetor
VetorMatriz → matriz

Dimensao → numerointeiro : numerointeiro Dimensao_'
Dimensao_' -> , Dimensao
Dimensao_' ->

TipoBasico → inteiro
TipoBasico → real
TipoBasico → caractere
TipoBasico → logico
TipoBasico → identificador
BlocoComandos → inicio ListaComandos fim

ListaComandos → Comandos ; ListaComandos_'
ListaComandos_' -> ListaComandos
ListaComandos_' ->


Comnados -> identificador Comandos_'

Comandos_' -> ( EprIter ) 

Comandos → Variavel <- Expressao

Comandos → se Expressao entao ListaComandos Comandos_''

Comandos_'' -> fim se
Comandos_'' -> senao ListaComandos fim se 
Comandos → enquanto Expressao faca ListaComandos fim enquanto

Comandos → para identificador de Expressao ate Expressao Comandos_''' 
Comandos_''' -> faca ListaComandos fim para
Comandos_''' -> passo Expressao faca ListaComandos fim para

Comandos → repita ListaComandos ate Expressao
Comandos → leia ( Variavel )
Comandos → imprima ( ExprIter )

Comandos_' ->
Comandos_'' ->
Comandos_''' ->

Expressao → ExpressaoSimples Expressao_'
Expressao_' -> = ExpressaoSimples Expressao_'
Expressao_' -> <> ExpressaoSimples Expressao_'
Expressao_' -> < ExpressaoSimples Expressao_'
Expressao_' -> <= ExpressaoSimples Expressao_'
Expressao_' -> => ExpressaoSimples Expressao_'
Expressao_' -> >= ExpressaoSimples Expressao_'
Expressao_' -> > ExpressaoSimples Expressao_'
Expressao_'->


ExpressaoSimples → Termo ExpressaoSimples_'
ExpressaoSimples → + Termo ExpressaoSimples_'
ExpressaoSimples → - Termo ExpressaoSimples_'
ExpressaoSimples_' -> + Termo ExpressaoSimples_'
ExpressaoSimples_' -> - Termo ExpressaoSimples_'
ExpressaoSimples_' -> ou Termo ExpressaoSimples_'
ExpressaoSimples_' ->

Termo → Fator Termo_'
Termo_'→ * Fator Termo_'
Termo_' → / Fator Termo_'
Termo_' → DIV Fator Termo_'
Termo_' → E Fator Termo_'
Termo_' ->

Fator → ( Expressao )
Fator → NAO Fator
Fator → numero_inteiro
Fator → numero_real
Fator → verdadeiro
Fator → falso
Fator → string
Fator → identificador ( ExprIter )
Fator → Variavel

Variavel → identificador Variavel_'
Variavel_' → [ ExprIter ]
Variavel_' ->

ExprIter → Expressao ExprIter_'
ExprIter_' → , ExprIter 
ExprIter_' ->
